Closes #2404 - Changes jakarta migration in wildfly